welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: reassignment to val
			i = i+1
                          ^